[package]
name = "eww-history-ext"
version = "0.2.0"
authors = ["Jiacai Liu <jiacai2050@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
emacs = "0.18"
rusqlite = { version = "0.26.3", features = ["bundled"] }
anyhow = { version = "1.0" }

[dev-dependencies]
tempdir = "0.3"

[profile.release]
# only in nightly now
# strip = true
lto = true