[package]
name = "eww-history-ext"
version = "0.2.3"
authors = ["Jiacai Liu <dev@liujiacai.net>"]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
emacs = "0.18"
rusqlite = { version = "0.26.3", features = ["bundled"] }
anyhow = { version = "1.0" }

[dev-dependencies]
tempdir = "0.3"

[profile.release]
strip = true
lto = true